Sensor data implemented for step count and calories burned

--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -4,5 +4,5 @@
     <string name="share_with_friends">Share with friends</string>
     <string name="total_steps">Steps</string>
     <string name="start">Start</string>
-    <string name="heart_bit">Heart Bit</string>
+    <string name="heart_bit">Heart Beat</string>
 </resources>
