UI changes for wear and mobile

--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -3,6 +3,6 @@
     <string name="kcal">Kcal</string>
     <string name="share_with_friends">Share with friends</string>
     <string name="total_steps">Steps</string>
-    <string name="start">Start</string>
+    <string name="reset">Reset</string>
     <string name="heart_bit">Heart Beat</string>
 </resources>
