--- a/wear/src/main/res/values/strings.xml
+++ b/wear/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="hear_bit">Heart</string>
     <string name="kcal">Kcal</string>
     <string name="share">Share</string>
+    <string name="no_sensor">No sensor detected on this device</string>
 </resources>
